--- a/aservice-sms/src/main/resources/application.yml
+++ b/aservice-sms/src/main/resources/application.yml
@@ -4,3 +4,9 @@ server:
 spring:
   application:
     name: aservice-sms
+
+# eureka配置
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/eureka/
