--- a/aservice-rbac/pom.xml
+++ b/aservice-rbac/pom.xml
@@ -18,23 +18,52 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
+        <!-- 通用模块 -->
+        <dependency>
+            <groupId>com.zimug.dongbb.cloud</groupId>
+            <artifactId>zimug-web-spring-boot-starter</artifactId>
+        </dependency>
+        <!-- 持久层模块 -->
+        <dependency>
 			<groupId>com.zimug.dongbb.cloud</groupId>
 			<artifactId>dbcloud-persistence-spring-boot-starter</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.zimug.dongbb.cloud</groupId>
-			<artifactId>zimug-web-spring-boot-starter</artifactId>
-		</dependency>
+
+        <!-- web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+        <!-- 由于要加密，所以引入security包 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+
+        <!-- eureka客户端(包含了ribbon) -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+        <!-- openfeign远程调用 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+        <!-- openfeign的httpclient客户端 -->
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
+        </dependency>
+
+        <!-- ribbon的重试机制，openfeign也带有（也是使用的ribbon），所以二选一即可 -->
+        <dependency>
+            <artifactId>spring-retry</artifactId>
+            <groupId>org.springframework.retry</groupId>
+        </dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
