--- a/aservice-rbac/src/main/resources/application.yml
+++ b/aservice-rbac/src/main/resources/application.yml
@@ -12,12 +12,44 @@ spring:
     username: linna
     password: d%r2Tz08
     driver-class-name: com.mysql.cj.jdbc.Driver
+  # ribbon的重试机制
+  cloud:
+    loadbalancer:
+      retry:
+        enabled: true
 
 # debug: true
-
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
+# eureka配置
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/eureka/
 
+# 设置ribbon负载均衡策略
+#aservice-rbac:
+#  ribbon:
+#    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
+#    自定义的负载策略
+#    NFLoadBalancerRuleClassName: com.zimug.dongbb.cloud.aservice.rbac.config.MyLoadBanlanceRule
+
+# 饥饿加载
+# 在启动的时候就会去加载Ribbon Client及被调用服务上下文，从而在实际发送请求的时候就可以直接使用，从而提高第一次服务请求的访问速
+ribbon:
+  eager-load:
+    enabled: true   #开启饥饿加载
+    clients: aservice-sms  #饥饿加载的服务
+
+# 配置日志等级 Feign客户端的DEBUG日志
+logging:
+  level:
+    com.zimug.dongbb.cloud.aservice.rbac.feign.SmsService: debug
+
+# 设置feign的客户端
+feign:
+  okhttp:
+    enabled: true
