--- a/zimug-server-eureka/pom.xml
+++ b/zimug-server-eureka/pom.xml
@@ -19,6 +19,7 @@
 	</properties>
 
 	<dependencies>
+        <!-- eureka服务端 -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
