--- a/zimug-server-eureka/src/main/resources/application-peer.yml
+++ b/zimug-server-eureka/src/main/resources/application-peer.yml
@@ -9,8 +9,8 @@ spring:
   # 增加登录密码，设置登录密码
   security:
     user:
-      name: zimug
-      password: centerpwd
+      name: root
+      password: root
   # 多网卡环境绑定网卡
 #  cloud:
 #    inetutils:
@@ -23,17 +23,17 @@ spring:
 eureka:
   instance:
     hostname: peer
-#    # 不使用hostname，使用ip
-#    instance-id: ${spring.application.name}-${eureka.instance.hostname}:${server.port}
+    # 不使用hostname，使用ip
+    instance-id: ${spring.application.name}-${eureka.instance.hostname}:${server.port}
     # 健康检查路径，是因为设置了context-path。默认的健康检查路径是以“/”
-#    health-check-url: http://${eureka.instance.hostname}:${server.port}/${server.servlet.context-path}/actuator/health
-#  client:
-#    #从其他两个实例同步服务注册信息
-#    fetch-registry: true
-#    #向其他的两个eureka注册当前eureka实例
-#    register-with-eureka: true
-#    service-url:
-#      defaultZone: http://peer2:8761/eureka/eureka/,http://peer3:8761/eureka/eureka/
+    health-check-url: http://${eureka.instance.hostname}:${server.port}/${server.servlet.context-path}/actuator/health
+  client:
+    #从其他两个实例同步服务注册信息
+    fetch-registry: true
+    #向其他的两个eureka注册当前eureka实例
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://root:root@peer1:8761/eureka/eureka/,http://root:root@peer2:8761/eureka/eureka/,http://root:root@peer3:8761/eureka/eureka/
 
   # 开启eureka自我保护
   server:
