--- a/aservice-rbac/pom.xml
+++ b/aservice-rbac/pom.xml
@@ -65,6 +65,13 @@
             <groupId>org.springframework.retry</groupId>
         </dependency>
 
+        <!-- apollo客户端 -->
+        <dependency>
+            <groupId>com.ctrip.framework.apollo</groupId>
+            <artifactId>apollo-client</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
