--- a/aservice-sms/src/main/resources/application.yml
+++ b/aservice-sms/src/main/resources/application.yml
@@ -1,20 +1,35 @@
-server:
-  port: 8402
+app:
+  # appid要与apollo服务配置中心新建项目时候，配置的appid一致
+  id: dongbb-cloud-aservice-sms
+apollo:
+  # 表示在应用一启动的时候，就去加载配置信息
+  bootstrap:
+    enabled: true
+    # 配置公共属性
+    namespaces: application,yanfa.eureka-client
+  # 当apollo客户端从apollo-env.properties配置的configservice无法取得连接时，会找apollo.meta配置信息去获取连接。所以它是起到一个备份的作用（我们目前只搭建了DEV环境，就和dev.meta配置一样就可以）
+  meta: http://192.168.1.60:9431,http://192.168.1.61:9431,http://192.168.1.62:9431
 
-spring:
-  application:
-    name: aservice-sms
-
-# eureka配置
-eureka:
-  client:
-    service-url:
-      defaultZone: http://root:root@peer1:8761/eureka/eureka/,http://root:root@peer2:8761/eureka/eureka/,http://root:root@peer3:8761/eureka/eureka/
-  # 心跳检测检测与续约时间
-  # 测试时将值设置设置小些，保证服务关闭后注册中心能及时踢出服务
-  instance:
-    # 每间隔5s，向服务端发送一次心跳，证明自己依然”存活“。
-    lease-renewal-interval-in-seconds: 5  #默认30秒
-    # 告诉服务端，如果我10s之内没有给你发心跳，就代表我“死”了，请将我踢掉。
-    lease-expiration-duration-in-seconds: 10   #默认90秒
-
+#server:
+#  port: 8402
+#
+#spring:
+#  application:
+#    name: aservice-sms
+#
+## eureka配置
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://root:root@peer1:8761/eureka/eureka/,http://root:root@peer2:8761/eureka/eureka/,http://root:root@peer3:8761/eureka/eureka/
+#  # 心跳检测检测与续约时间
+#  # 测试时将值设置设置小些，保证服务关闭后注册中心能及时踢出服务
+#  instance:
+#    # 每间隔5s，向服务端发送一次心跳，证明自己依然”存活“。
+#    lease-renewal-interval-in-seconds: 5  #默认30秒
+#    # 告诉服务端，如果我10s之内没有给你发心跳，就代表我“死”了，请将我踢掉。
+#    lease-expiration-duration-in-seconds: 10   #默认90秒
+#
+#feign:
+#  okhttp:
+#    enabled: true
