--- a/aservice-rbac/pom.xml
+++ b/aservice-rbac/pom.xml
@@ -65,6 +65,18 @@
             <groupId>org.springframework.retry</groupId>
         </dependency>
 
+        <!-- spring cloud config -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+
+        <!-- 提供刷新配置文件接口/actuator/refresh -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
