--- a/zimug-server-config-repo/aservice-rbac-dev.yml
+++ b/zimug-server-config-repo/aservice-rbac-dev.yml
@@ -17,6 +17,12 @@ spring:
     loadbalancer:
       retry:
         enabled: true
+  # rabbitmq
+  rabbitmq:
+    host: 192.168.1.60
+    port: 5672
+    username: root
+    password: root
 
 # debug: true
 mybatis:
@@ -73,3 +79,4 @@ management:
 user:
   init:
     password: 12345678
+
