--- a/zimug-server-config-repo/aservice-sms-dev.yml
+++ b/zimug-server-config-repo/aservice-sms-dev.yml
@@ -4,6 +4,12 @@ server:
 spring:
   application:
     name: aservice-sms
+  # rabbitmq
+  rabbitmq:
+    host: 192.168.1.60
+    port: 5672
+    username: root
+    password: root
 
 # eureka配置
 eureka:
