--- a/aservice-sms/src/main/resources/application.yml
+++ b/aservice-sms/src/main/resources/application.yml
@@ -1,20 +1,28 @@
-server:
-  port: 8402
-
-spring:
-  application:
-    name: aservice-sms
-
-# eureka配置
-eureka:
-  client:
-    service-url:
-      defaultZone: http://root:root@peer1:8761/eureka/eureka/,http://root:root@peer2:8761/eureka/eureka/,http://root:root@peer3:8761/eureka/eureka/
-  # 心跳检测检测与续约时间
-  # 测试时将值设置设置小些，保证服务关闭后注册中心能及时踢出服务
-  instance:
-    # 每间隔5s，向服务端发送一次心跳，证明自己依然”存活“。
-    lease-renewal-interval-in-seconds: 5  #默认30秒
-    # 告诉服务端，如果我10s之内没有给你发心跳，就代表我“死”了，请将我踢掉。
-    lease-expiration-duration-in-seconds: 10   #默认90秒
-
+#server:
+#  port: 8402
+#
+#spring:
+#  application:
+#    name: aservice-sms
+#  # ribbon的重试机制
+#  cloud:
+##    loadbalancer:
+##      retry:
+##        enabled: true
+#
+#    nacos:
+#      discovery:
+#        server-addr: 192.168.1.60:8848
+### eureka配置
+##eureka:
+##  client:
+##    service-url:
+##      defaultZone: http://root:root@peer1:8761/eureka/eureka/,http://root:root@peer2:8761/eureka/eureka/,http://root:root@peer3:8761/eureka/eureka/
+##  # 心跳检测检测与续约时间
+##  # 测试时将值设置设置小些，保证服务关闭后注册中心能及时踢出服务
+##  instance:
+##    # 每间隔5s，向服务端发送一次心跳，证明自己依然”存活“。
+##    lease-renewal-interval-in-seconds: 5  #默认30秒
+##    # 告诉服务端，如果我10s之内没有给你发心跳，就代表我“死”了，请将我踢掉。
+##    lease-expiration-duration-in-seconds: 10   #默认90秒
+#
