--- a/aservice-rbac/src/main/resources/bootstrap.yml
+++ b/aservice-rbac/src/main/resources/bootstrap.yml
@@ -5,12 +5,21 @@ spring:
     nacos:
       discovery:
         server-addr: 192.168.1.60:8848
+
       config:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
-        extension-configs:
-          - data-id: aservice-rbac-dev.yaml
-            group: ZIMUG_GROUP
-            refresh: true
-          - data-id: common-datasource.yaml
-            group: DEFAULT_GROUP
-            refresh: false
+        file-extension: yaml   #nacos配置文件后缀，下文配置发布的时候会用到。注意是yaml，不是yml
+        group: ZIMUG_GROUP  #配置分组，默认分组是DEFAULT_GROUP
+
+
+#      config:
+#        server-addr: ${spring.cloud.nacos.discovery.server-addr}
+#        # 一个项目使用多个配置文件(共享配置文件)
+#        extension-configs:
+#          - data-id: aservice-rbac-dev.yaml
+#            group: ZIMUG_GROUP
+#            # 是否支持应用中可动态刷新
+#            refresh: true
+#          - data-id: common-datasource.yaml
+#            group: DEFAULT_GROUP
+#            refresh: false
