--- a/zimug-server-config-repo/aservice-rbac-dev.yml
+++ b/zimug-server-config-repo/aservice-rbac-dev.yml
@@ -80,3 +80,12 @@ user:
   init:
     password: 123456789
 
+# 全局熔断配置
+hystrix:
+  command:
+    default:
+      circuitBreaker:
+        enabled: true
+        requestVolumeThreshold: 20
+        errorThresholdPercentage: 60
+        sleepWindowInMilliseconds: 300000
