--- a/zimug-server-config/src/main/resources/application.yml
+++ b/zimug-server-config/src/main/resources/application.yml
@@ -10,8 +10,8 @@ spring:
         git:
           uri: https://github.com/yiitree/my-dongbb-cloud
           searchPaths: zimug-server-config-repo
-          username: xxx
-          password: xxx
+          username: 772701414@qq.com
+          password: Rui0530_git
   security:
     basic:
       enabled: true  #启用基本认证(默认)
