增加流量监控（未完成）

--- a/aservice-rbac/src/main/resources/application.yml
+++ b/aservice-rbac/src/main/resources/application.yml
@@ -1,74 +1,79 @@
-#server:
-#  port: 8401
-#
-#spring:
-#  application:
-#    name: aservice-rbac
-#  jackson:
-#    date-format: yyyy-MM-dd HH:mm:ss
-#    time-zone: GMT+8
-#  datasource:
-#    url: jdbc:mysql://123.56.169.21:3306/linnadb?useUnicode=true&characterEncoding=utf-8&useSSL=false
-#    username: linna
-#    password: d%r2Tz08
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#  # ribbon的重试机制
-#  cloud:
-#    loadbalancer:
-#      retry:
-#        enabled: true
-#
-#    nacos:
-#      discovery:
-#        server-addr: 192.168.1.60:8848
-#
-#
-#
-## debug: true
-#mybatis:
-#  configuration:
-#    map-underscore-to-camel-case: true
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-#
-#
-### eureka配置
-##eureka:
-##  client:
-##    service-url:
-##      defaultZone: http://root:root@peer1:8761/eureka/eureka/,http://root:root@peer2:8761/eureka/eureka/,http://root:root@peer3:8761/eureka/eureka/
-##  #      defaultZone: http://zimug:centerpwd@127.0.0.1:8761/eureka/eureka/
-##  # 心跳检测检测与续约时间
-##  # 测试时将值设置设置小些，保证服务关闭后注册中心能及时踢出服务
-##  instance:
-##    # 每间隔5s，向服务端发送一次心跳，证明自己依然”存活“。
-##    lease-renewal-interval-in-seconds: 5  #默认30秒
-##    # 告诉服务端，如果我10s之内没有给你发心跳，就代表我“死”了，请将我踢掉。
-##    lease-expiration-duration-in-seconds: 10   #默认90秒
-#
-## 设置ribbon负载均衡策略
-##aservice-rbac:
-##  ribbon:
-##    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
-##    自定义的负载策略
-##    NFLoadBalancerRuleClassName: com.zimug.dongbb.cloud.aservice.rbac.config.MyLoadBanlanceRule
-#
-## 饥饿加载
-## 在启动的时候就会去加载Ribbon Client及被调用服务上下文，从而在实际发送请求的时候就可以直接使用，从而提高第一次服务请求的访问速
-#ribbon:
-#  eager-load:
-#    enabled: true   #开启饥饿加载
-#    clients: aservice-sms  #饥饿加载的服务
-#
-## 配置日志等级 Feign客户端的DEBUG日志
-#logging:
-#  level:
-#    com.zimug.dongbb.cloud.aservice.rbac.feign.SmsService: debug
-#
-## 设置feign的客户端
-#feign:
-#  okhttp:
-#    enabled: true
+server:
+  port: 8401
 
-#user:
-#  init:
-#    password: 666666
+spring:
+  application:
+    name: aservice-rbac
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+  datasource:
+    url: jdbc:mysql://123.56.169.21:3306/linnadb?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: linna
+    password: d%r2Tz08
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  # ribbon的重试机制
+  cloud:
+    loadbalancer:
+      retry:
+        enabled: true
+    # nacos服务发现
+    nacos:
+      discovery:
+        server-addr: 192.168.1.60:8848
+    # sentinel流量监控
+    sentinel:
+      transport:
+        # 指定应用与Sentinel控制台交互的端口
+        port: 8719
+        dashboard: 192.168.1.60:8774
+
+# debug: true
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+
+## eureka配置
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://root:root@peer1:8761/eureka/eureka/,http://root:root@peer2:8761/eureka/eureka/,http://root:root@peer3:8761/eureka/eureka/
+#  #      defaultZone: http://zimug:centerpwd@127.0.0.1:8761/eureka/eureka/
+#  # 心跳检测检测与续约时间
+#  # 测试时将值设置设置小些，保证服务关闭后注册中心能及时踢出服务
+#  instance:
+#    # 每间隔5s，向服务端发送一次心跳，证明自己依然”存活“。
+#    lease-renewal-interval-in-seconds: 5  #默认30秒
+#    # 告诉服务端，如果我10s之内没有给你发心跳，就代表我“死”了，请将我踢掉。
+#    lease-expiration-duration-in-seconds: 10   #默认90秒
+
+# 设置ribbon负载均衡策略
+#aservice-rbac:
+#  ribbon:
+#    NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
+#    自定义的负载策略
+#    NFLoadBalancerRuleClassName: com.zimug.dongbb.cloud.aservice.rbac.config.MyLoadBanlanceRule
+
+# 饥饿加载
+# 在启动的时候就会去加载Ribbon Client及被调用服务上下文，从而在实际发送请求的时候就可以直接使用，从而提高第一次服务请求的访问速
+ribbon:
+  eager-load:
+    enabled: true   #开启饥饿加载
+    clients: aservice-sms  #饥饿加载的服务
+
+# 配置日志等级 Feign客户端的DEBUG日志
+logging:
+  level:
+    com.zimug.dongbb.cloud.aservice.rbac.feign.SmsService: debug
+
+# 设置feign的客户端
+feign:
+  okhttp:
+    enabled: true
+
+user:
+  init:
+    password: 666666
+
