--- a/aservice-rbac/src/main/resources/bootstrap.yml
+++ b/aservice-rbac/src/main/resources/bootstrap.yml
@@ -5,12 +5,11 @@ spring:
     nacos:
       discovery:
         server-addr: 192.168.1.60:8848
-
+      # nacos配置中心
       config:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
         file-extension: yaml   #nacos配置文件后缀，下文配置发布的时候会用到。注意是yaml，不是yml
         group: ZIMUG_GROUP  #配置分组，默认分组是DEFAULT_GROUP
-
 
 #      config:
 #        server-addr: ${spring.cloud.nacos.discovery.server-addr}
