增加限流注解，配置中心暂时取消使用

--- a/aservice-rbac/src/main/resources/application.yml
+++ b/aservice-rbac/src/main/resources/application.yml
@@ -26,7 +26,8 @@ spring:
       transport:
         # 指定应用与Sentinel控制台交互的端口
         port: 8719
-        dashboard: 192.168.1.60:8774
+#        dashboard: 192.168.1.60:8774
+        dashboard: 192.168.1.66:8080
 
 # debug: true
 mybatis:
@@ -71,6 +72,9 @@ logging:
 # 设置feign的客户端
 feign:
   okhttp:
+    enabled: true
+  # 远程调用中限流打开
+  sentinel:
     enabled: true
 
 user:
