--- a/zimug-server-gateway/src/main/resources/application.yml
+++ b/zimug-server-gateway/src/main/resources/application.yml
@@ -56,6 +56,7 @@ zimug:
       enabled: true   #是否开启JWT登录认证功能
       secret: fjkfaf;afa  # JWT私钥，用于校验JWT令牌的合法性
       expiration: 3600000 #JWT令牌的有效期，用于校验JWT令牌的合法性
+      # cookie名称
       header: JWTHeaderName #HTTP请求的Header名称，该Header作为参数传递JWT令牌
       userParamName: username  #用户登录认证用户名参数名称
       pwdParamName: password  #用户登录认证密码参数名称
