--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,6 @@
                 <artifactId>dbcloud-persistence-spring-boot-starter</artifactId>
                 <version>1.0</version>
             </dependency>
-
             <!-- 权限管理（内部模块） -->
             <dependency>
                 <groupId>com.zimug.dongbb.cloud</groupId>
@@ -53,6 +52,7 @@
                 <version>1.0</version>
             </dependency>
 
+            <!-- springcloud -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
@@ -61,6 +61,7 @@
                 <scope>import</scope>
             </dependency>
 
+            <!-- springboot -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-parent</artifactId>
@@ -69,20 +70,7 @@
                 <scope>import</scope>
             </dependency>
 
-            <dependency>
-                <groupId>org.mybatis.spring.boot</groupId>
-                <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>1.3.2</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.github.pagehelper</groupId>
-                <artifactId>pagehelper-spring-boot-starter</artifactId>
-                <version>1.2.10</version>
-            </dependency>
-
-            <!-- 在父项目中加入alibaba项目版本管理依赖 nacos -->
+            <!-- nacos -->
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
@@ -90,6 +78,23 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <!-- mybatis -->
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>1.3.2</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- 分页助手 -->
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>1.2.10</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
